--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
         <section class="py-5 bg-dark section-angle top-right bottom-left">
             <div class="col-12 text-muted text-center">
                 <a href="https://t.me/aortadev" target="_blank">Aortadev - Powered by Aorta dev</a>
+            <div>
+                <!-- Pemutar musik otomatis -->
+    <audio autoplay loop>
+        <source src="https://files.catbox.moe/aqwsvw.m4a" type="audio/mp3">
+        Browser Anda tidak mendukung elemen audio.
+    </audio>
             </div>
         </section>
     </div>
