--- a/index.html
+++ b/index.html
@@ -54,31 +54,61 @@
         </section>
     </div>
     <script>
-        function disableKeys(e) {
-            if ((e.ctrlKey && (e.key === 'u' || e.key === 's' || e.key === 'p')) || e.key === 'F12') {
-                e.preventDefault();
-                return false;
+        async function encryptCode(code) {
+      return JsConfuser.obfuscate(code, {
+        target: "node",
+        preset: "high",
+        compact: true,
+        minify: true,
+        flatten: true,
+        identifierGenerator: function () {
+          const originalString =
+            "齐/*AortaEncrypter/*^/*($break)*/" +
+            "/*Aortadev/*^/*($break)*/";
+
+          function hapusKarakterTidakDiinginkan(input) {
+            return input.replace(
+              /[^a-zA-Z/*ᨒZenn/*^/*($break)*/]/g,
+              ''
+            );
+          }
+
+          function stringAcak(panjang) {
+            let hasil = '';
+            const karakter = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz';
+            const panjangKarakter = karakter.length;
+
+            for (let i = 0; i < panjang; i++) {
+              hasil += karakter.charAt(
+                Math.floor(Math.random() * panjangKarakter)
+              );
             }
-        }
+            return hasil;
+          }
 
-        let isObfuscated = false;
-        const uniqueString = 'ボットAortaEncrypterボット';
-
-        function obfuscateCode(code) {
-            const base64Encoded = btoa(unescape(encodeURIComponent(code)));
-            let finalCode = `"Powered by AortaDev"
-
-`;
-            for (let i = 0; i < base64Encoded.length; i++) {
-                finalCode += base64Encoded[i];
-                if (Math.random() < 0.15) {
-                    finalCode += uniqueString;
-                }
-            }
-            return `// Obfuscated by AortaEncrypter 
-
-${finalCode}`;
-        }
+          return hapusKarakterTidakDiinginkan(originalString) + stringAcak(2);
+        },
+        renameVariables: true,
+        renameGlobals: true,
+        stringEncoding: 0.01,
+        stringSplitting: 0.1,
+        stringConcealing: true,
+        stringCompression: true,
+        duplicateLiteralsRemoval: true,
+        shuffle: { hash: false, true: false },
+        stack: false,
+        controlFlowFlattening: false,
+        opaquePredicates: false,
+        deadCode: false,
+        dispatcher: false,
+        rgf: false,
+        calculator: false,
+        hexadecimalNumbers: false,
+        movedDeclarations: true,
+        objectExtraction: true,
+        globalConcealing: true
+      });
+    }
 
         document.getElementById('obfuscateButton').addEventListener('click', function() {
             if (isObfuscated) {
